vercel configs fix index

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,8 @@
     ],
     "routes": [
         { "src": "/(.*)", "dest": "/public/$1" }
+    ],
+    "rewrites": [
+        { "source": "/(.*)", "destination": "/public/index.php" }
     ]
 }
